# Whatsmeow-rust

./: Cargo.toml  README.md
examples/: basic_flow.rs  echo_bot.rs  encryption_demo.rs  full_demo.rs  media_demo.rs  qr_auth_flow.rs  whatsapp_connect.rs  whatsapp_echo.rs
examples_data/: basic_session.json  encryption_session.json  media_session.json  qr_auth_session.json
examples_data/full_demo/: session.json
src/: barq_api.rs  barq_core.rs  client.rs  config.rs  lib.rs  main.rs  state.rs
src/binary/: decoder.rs  encoder.rs  mod.rs  node.rs  token.rs
src/crypto/: cipher.rs  hkdf.rs  keypair.rs  mod.rs  noise.rs
src/proto/: mod.rs  wa.rs
src/protocol/: client.rs  message.rs  mod.rs  qr.rs  request.rs
src/socket/: handshake.rs  mod.rs
src/store/: device.rs  memory.rs  mod.rs  traits.rs
src/types/: events.rs  jid.rs  mod.rs
