[package]
name = "whatsmeow-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of WhatsApp Web protocol, inspired by whatsmeow"
authors = ["Whatsmeow Rust Port"]
license = "MPL-2.0"

[dependencies]
# Core utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
lazy_static = "1.4"
log = "0.4"

# Crypto (Phase 2)
base64 = "0.21"
aes-gcm = { version = "0.10", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
hex = "0.4"

# Networking (Phase 2)
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# QR Code
qrcode = "0.14"

# CLI (for examples)
clap = { version = "4.5", features = ["derive"] }

# HTTP (for media)
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
prost = "0.14.1"
prost-types = "0.14.1"
